# datapull

datapull/: README.md  pyproject.toml  session_store.db  stats.json
datapull/notebooks/: betas.ipynb  featureset.ipynb  ml.html  ml.ipynb  ner.ipynb
datapull/src/datapull/: __main__.py
datapull/src/datapull/pipelines/data_processing/: __init__.py  nodes.py
datapull/src/datapull/pipelines/data_science/: __init__.py
featureset/: README.md  pyproject.toml  session_store.db  stats.json
featureset/conf/base/: catalog.yml
featureset/notebooks/: feature_importance.csv  featureset.ipynb  ml.ipynb
featureset/src/featureset/: __init__.py
featureset/src/featureset/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
featureset/src/featureset/pipelines/reporting/: __init__.py  nodes.py
spaceflights/: README.md  pyproject.toml  session_store.db  stats.json
spaceflights/conf/base/: catalog.yml
spaceflights/notebooks/: feature_importance.csv  ml.ipynb  temp.py
spaceflights/src/spaceflights/pipelines/data_science/: pipeline.py
