[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "datapull"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
datapull = "datapull.__main__:main"

[tool.kedro]
package_name = "datapull"
project_name = "datapull"
kedro_init_version = "0.19.6"
tools = [ "Kedro Viz",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "datapull.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
